# cli-ai-local

./: .env.example  .gitignore  LICENSE  README.md  install.py  launcher.py  pyproject.toml  requirements.txt  setup.py
scripts/: start-claude.ps1  start-claude.sh  start-codex.ps1  start-codex.sh  start-gemini.ps1  start-gemini.sh  start-hermes.ps1  start-hermes.sh  start-lmstudio.ps1  start-lmstudio.sh
