[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-ai-local"
version = "1.0.0"
description = "Local AI CLI Launcher"
readme = "README.md"
authors = [
    { name = "Douglas Feltrim" }
]
requires-python = ">=3.8"
dependencies = [
    "rich>=12.0.0",
    "inquirer>=2.9.0"
]

[project.scripts]
cli-ai = "launcher:main"
cli-ai-local = "launcher:main"

[tool.setuptools]
py-modules = ["launcher"]

[tool.setuptools.package-data]
"*" = ["scripts/*", ".env.example"]
